tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-partial-match.wyst
module syntax.removed_partial_match

enum Event { Idle Ready(u64) }

fn rejected(event: Event) -> u64 effects(none) {
  return #partial match event { .Idle { 0 } }
}
